tests/ui/linkage-attr/linkage3.stderr
error: invalid linkage specified
  --> $DIR/linkage3.rs:7:5
   |
LL |     static foo: *const i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

